modified:   phase-2/practice/numpy.ipynb

--- a/phase-2/practice/numpy.ipynb
+++ b/phase-2/practice/numpy.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "cbe6ee4a",
    "metadata": {},
    "outputs": [],
@@ -19,10 +19,82 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "adbf46cc",
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "0de5a7c9",
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "list=[1,2,3,4]\n",
+    "arr=np.array(list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "7488f3d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 4])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "6d72d320",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "8b7f508d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1],\n",
+       "       [2],\n",
+       "       [3],\n",
+       "       [4]])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr.shape\n",
+    "arr.reshape(4,1)"
+   ]
   }
  ],
  "metadata": {
