modified:   phase-2/practice/numpy.ipynb

--- a/phase-2/practice/numpy.ipynb
+++ b/phase-2/practice/numpy.ipynb
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "b06c7ac3",
    "metadata": {},
    "outputs": [
@@ -264,7 +264,7 @@
        "array([0, 1, 2, 3, 4, 5, 6])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,16 +277,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "94a162e8",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 5])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr[:,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "243ee946",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "arr=np.array([[1, 2, 3, 4, 5],\n",
+    "[2, 3, 4, 5, 6],\n",
+    "[9, 7, 6, 8, 9]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "64d2d3a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[4, 5],\n",
+       "       [6, 8]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr[1:,2:4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "7d369c96",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3, 4, 5])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr[1,1:4]"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "243ee946",
+   "id": "45c01f3a",
    "metadata": {},
    "outputs": [],
    "source": []
