modified:   phase-2/practice/numpy.ipynb

--- a/phase-2/practice/numpy.ipynb
+++ b/phase-2/practice/numpy.ipynb
@@ -352,9 +352,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "79c70809",
+   "metadata": {},
+   "source": [
+    "**.copy() doesn't change original while x=y does**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "45c01f3a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 1, 1, 1],\n",
+       "       [1, 1, 1, 1]])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.ones((2,4),dtype=int)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45c01f3a",
+   "id": "54505342",
    "metadata": {},
    "outputs": [],
    "source": []
