modified:   phase-2/practice/pandas-2.ipynb

--- a/phase-2/practice/pandas-2.ipynb
+++ b/phase-2/practice/pandas-2.ipynb
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 55,
    "id": "22cffe71",
    "metadata": {},
    "outputs": [
@@ -704,37 +704,39 @@
        "      <th></th>\n",
        "      <th>a</th>\n",
        "      <th>b</th>\n",
+       "      <th>c</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>foo</td>\n",
-       "      <td>hello, \"bob\",nice to see you</td>\n",
+       "      <th>foo</th>\n",
+       "      <td>hello</td>\n",
+       "      <td>\"bob\"</td>\n",
+       "      <td>nice to see you\"</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     a                             b\n",
-       "0  foo  hello, \"bob\",nice to see you"
+       "         a       b                 c\n",
+       "foo  hello   \"bob\"  nice to see you\""
       ]
      },
-     "execution_count": 48,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data='a,b\\nfoo,\"hello, \\\\\"bob\\\\\",nice to see you\"'\n",
+    "data='a,b,c\\nfoo,\"hello\", \\\\\"bob\\\\\",nice to see you\"'\n",
     "pd.read_csv(StringIO(data),escapechar='\\\\')\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "672c3e3e",
+   "id": "60ebf83c",
    "metadata": {},
    "outputs": [],
    "source": []
