--- a/phase-2/practice/pandas-3.ipynb
+++ b/phase-2/practice/pandas-3.ipynb
@@ -286,22 +286,213 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "6e747e1f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'''read html==counts(table)'''\n",
-    "dfs=pd.read_html(\"https://www.fdic.gov/bank/individual/failed/banklist.html\")"
+    "dfs=pd.read_html(\"https://www.fdic.gov/bank/individual/failed/banklist.html\")\n",
+    "type(dfs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "8c89d4b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Bank Name</th>\n",
+       "      <th>City</th>\n",
+       "      <th>State</th>\n",
+       "      <th>Cert</th>\n",
+       "      <th>Acquiring Institution</th>\n",
+       "      <th>Closing Date</th>\n",
+       "      <th>Fund  Sort ascending</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>The Santa Anna National Bank</td>\n",
+       "      <td>Santa Anna</td>\n",
+       "      <td>Texas</td>\n",
+       "      <td>5520</td>\n",
+       "      <td>Coleman County State Bank</td>\n",
+       "      <td>June 27, 2025</td>\n",
+       "      <td>10549</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Pulaski Savings Bank</td>\n",
+       "      <td>Chicago</td>\n",
+       "      <td>Illinois</td>\n",
+       "      <td>28611</td>\n",
+       "      <td>Millennium Bank</td>\n",
+       "      <td>January 17, 2025</td>\n",
+       "      <td>10548</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>The First National Bank of Lindsay</td>\n",
+       "      <td>Lindsay</td>\n",
+       "      <td>Oklahoma</td>\n",
+       "      <td>4134</td>\n",
+       "      <td>First Bank &amp; Trust Co., Duncan, OK</td>\n",
+       "      <td>October 18, 2024</td>\n",
+       "      <td>10547</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Republic First Bank dba Republic Bank</td>\n",
+       "      <td>Philadelphia</td>\n",
+       "      <td>Pennsylvania</td>\n",
+       "      <td>27332</td>\n",
+       "      <td>Fulton Bank, National Association</td>\n",
+       "      <td>April 26, 2024</td>\n",
+       "      <td>10546</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Citizens Bank</td>\n",
+       "      <td>Sac City</td>\n",
+       "      <td>Iowa</td>\n",
+       "      <td>8758</td>\n",
+       "      <td>Iowa Trust &amp; Savings Bank</td>\n",
+       "      <td>November 3, 2023</td>\n",
+       "      <td>10545</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Heartland Tri-State Bank</td>\n",
+       "      <td>Elkhart</td>\n",
+       "      <td>Kansas</td>\n",
+       "      <td>25851</td>\n",
+       "      <td>Dream First Bank, N.A.</td>\n",
+       "      <td>July 28, 2023</td>\n",
+       "      <td>10544</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>First Republic Bank</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>California</td>\n",
+       "      <td>59017</td>\n",
+       "      <td>JPMorgan Chase Bank, N.A.</td>\n",
+       "      <td>May 1, 2023</td>\n",
+       "      <td>10543</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Signature Bank</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>57053</td>\n",
+       "      <td>Flagstar Bank, N.A.</td>\n",
+       "      <td>March 12, 2023</td>\n",
+       "      <td>10540</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Silicon Valley Bank</td>\n",
+       "      <td>Santa Clara</td>\n",
+       "      <td>California</td>\n",
+       "      <td>24735</td>\n",
+       "      <td>First Citizens Bank &amp; Trust Company</td>\n",
+       "      <td>March 10, 2023</td>\n",
+       "      <td>10539</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Almena State Bank</td>\n",
+       "      <td>Almena</td>\n",
+       "      <td>Kansas</td>\n",
+       "      <td>15426</td>\n",
+       "      <td>Equity Bank</td>\n",
+       "      <td>October 23, 2020</td>\n",
+       "      <td>10538</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               Bank Name           City         State   Cert  \\\n",
+       "0           The Santa Anna National Bank     Santa Anna         Texas   5520   \n",
+       "1                   Pulaski Savings Bank        Chicago      Illinois  28611   \n",
+       "2     The First National Bank of Lindsay        Lindsay      Oklahoma   4134   \n",
+       "3  Republic First Bank dba Republic Bank   Philadelphia  Pennsylvania  27332   \n",
+       "4                          Citizens Bank       Sac City          Iowa   8758   \n",
+       "5               Heartland Tri-State Bank        Elkhart        Kansas  25851   \n",
+       "6                    First Republic Bank  San Francisco    California  59017   \n",
+       "7                         Signature Bank       New York      New York  57053   \n",
+       "8                    Silicon Valley Bank    Santa Clara    California  24735   \n",
+       "9                      Almena State Bank         Almena        Kansas  15426   \n",
+       "\n",
+       "                 Acquiring Institution      Closing Date  Fund  Sort ascending  \n",
+       "0            Coleman County State Bank     June 27, 2025                 10549  \n",
+       "1                      Millennium Bank  January 17, 2025                 10548  \n",
+       "2   First Bank & Trust Co., Duncan, OK  October 18, 2024                 10547  \n",
+       "3    Fulton Bank, National Association    April 26, 2024                 10546  \n",
+       "4            Iowa Trust & Savings Bank  November 3, 2023                 10545  \n",
+       "5               Dream First Bank, N.A.     July 28, 2023                 10544  \n",
+       "6            JPMorgan Chase Bank, N.A.       May 1, 2023                 10543  \n",
+       "7                  Flagstar Bank, N.A.    March 12, 2023                 10540  \n",
+       "8  First Citizens Bank & Trust Company    March 10, 2023                 10539  \n",
+       "9                          Equity Bank  October 23, 2020                 10538  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfs[0]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c89d4b4",
+   "id": "74efc247",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dfs=pd.read_html('https://en.wikipedia.org/wiki/Mobile_country_code',match='Country',header=0)\n",
+    "dfs"
+   ]
   }
  ],
  "metadata": {
