modified:   phase-2/practice/basicpython.ipynb

--- a/phase-2/practice/basicpython.ipynb
+++ b/phase-2/practice/basicpython.ipynb
@@ -865,32 +865,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "5068246c",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "incomplete input (1636883622.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[21], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    class audi(car):\u001b[0m\n\u001b[1;37m                    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m incomplete input\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class audi(car):\n",
     "  def __init__(self, window, door, engine,ai):\n",
-    "    super().__init__(window, door, engine)"
+    "    super().__init__(window, door, engine)\n",
+    "    self.ai=ai\n",
+    "  def selfdriving(self):\n",
+    "    print(\"not yet\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "7a8eda52",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "driving\n",
+      "not yet\n"
+     ]
+    }
+   ],
+   "source": [
+    "q7=audi(4,4,\"v10\",True)\n",
+    "q7.drive()\n",
+    "q7.selfdriving()"
+   ]
   },
   {
    "cell_type": "code",
